# marketschema

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  package.json  pyproject.toml
.claude/: docs.md  hookify.implicit-fallback-python.local.md  hookify.implicit-fallback-rust.local.md  hookify.magic-numbers-python.local.md  hookify.magic-numbers-rust.local.md
.claude/skills/research/: SKILL.md
.specify/memory/: constitution.md
crates/marketschema-adapters/: Cargo.toml
crates/marketschema-adapters/src/: adapter.rs  error.rs  lib.rs  mapping.rs  registry.rs  transforms.rs
crates/marketschema-adapters/tests/: adapter_test.rs  error_test.rs  mapping_test.rs  transforms_test.rs
crates/marketschema-examples/: Cargo.toml
crates/marketschema-examples/examples/: stooq_demo.rs
crates/marketschema-examples/src/: lib.rs
crates/marketschema-examples/src/stooq/: adapter.rs  constants.rs  error.rs  mod.rs
crates/marketschema-examples/tests/: stooq_test.rs
crates/marketschema-http/: .clippy.toml  Cargo.toml  rustfmt.toml
crates/marketschema-http/src/: adapter.rs  cache.rs  client.rs  error.rs  lib.rs  rate_limit.rs  retry.rs
crates/marketschema-http/tests/: adapter_tests.rs  cache_tests.rs  client_tests.rs  error_tests.rs  integration_tests.rs  rate_limit_tests.rs  retry_tests.rs
docs/: Makefile  architecture.md  code-generation.md  conf.py  glossary.md  index.md
docs/adr/: index.md
docs/adr/codegen/: 001-unevaluated-properties-workaround.md
docs/adr/field-names/: common.md  derivatives.md  instrument.md  market-data.md  pairs.md
docs/adr/structure/: 001-multi-language-directory-layout.md
docs/adr/types/: enum-values.md  format-conventions.md  nullable-market-data-fields.md
docs/guides/: adapter-development.md  http-client.md  index.md  models.md
docs/research/: api-field-names-sources.md  index.md  sources.md
examples/bitbank/: README.md  adapter.py  demo.py
examples/stockanalysis/: README.md  __init__.py  adapter.py  demo.py
examples/stockanalysis/schemas/: extended_ohlcv.json
examples/stooq/: adapter.py  demo.py
python/: pyproject.toml
python/examples/: __init__.py
python/examples/bitbank/: __init__.py  demo.py
python/examples/stockanalysis/: models.py
python/examples/stooq/: README.md  __init__.py  demo.py
python/src/marketschema/: __init__.py  exceptions.py
python/src/marketschema/adapters/: __init__.py
python/src/marketschema/models/: definitions.py  derivative_info.py  expiry_info.py  ohlcv.py  orderbook.py  quote.py  trade.py  volume_info.py
python/tests/: conftest.py
python/tests/contract/: test_schema_compliance.py
python/tests/examples/: __init__.py
python/tests/examples/bitbank/: __init__.py
python/tests/examples/stockanalysis/: __init__.py  test_adapter_integration.py
python/tests/examples/stooq/: test_adapter.py
python/tests/fixtures/valid/: derivative_info.json  quote.json  trade.json  volume_info.json
python/tests/integration/: test_http_adapter.py
python/tests/unit/: __init__.py  test_generate_models.py  test_models.py  test_registry.py  test_schemas.py
python/tests/unit/http/: __init__.py  test_client.py
rust/: Cargo.toml  README.md
rust/examples/: bitbank_demo.rs  quickstart.rs  stockanalysis_demo.rs  stooq_demo.rs
rust/examples/bitbank/: README.md  adapter.rs  constants.rs  error.rs  mod.rs
rust/examples/stockanalysis/: README.md  adapter.rs  constants.rs  error.rs  mod.rs  models.rs
rust/examples/stooq/: README.md  adapter.rs  constants.rs  error.rs  mod.rs
rust/src/: lib.rs
rust/src/types/: definitions.rs  derivative_info.rs  expiry_info.rs  instrument.rs  mod.rs  ohlcv.rs  option_info.rs  orderbook.rs  quote.rs  trade.rs  volume_info.rs
rust/tests/: bitbank_test.rs  compile_fail.rs  stockanalysis_test.rs  stooq_test.rs  types_test.rs
rust/tests/stooq/: mod.rs
rust/tests/ui/: currency_no_from_string.rs  currency_no_from_string.stderr  price_size_not_interchangeable.rs  price_size_not_interchangeable.stderr
schemas/: definitions.json  derivative_info.json  expiry_info.json  instrument.json  ohlcv.json  option_info.json  orderbook.json  quote.json  trade.json  volume_info.json
scripts/: bundle_schemas.sh  generate_models.sh  generate_rust.sh
specs/001-core/: spec.md
specs/001-core/checklists/: requirements.md
specs/001-market-data-schema/: field-requirements.csv  format-conventions.csv  plan.md  research.md  spec.md  tasks.md
specs/001-market-data-schema/checklists/: requirements.md
specs/001-market-data-schema/contracts/: definitions.json  derivative_info.json  expiry_info.json  instrument.json  orderbook.json  volume_info.json
specs/002-data-model/: data-model.md  enum-values.csv  field-requirements.csv  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-model-python/: spec.md
specs/002-data-model-python/checklists/: requirements.md
specs/002-data-model-rust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-model-rust/checklists/: requirements.md
specs/002-data-model/contracts/: ohlcv.json  option_info.json  quote.json  trade.json
specs/002-data-model/lang/: python.md  rust.md
specs/003-http-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-http-client-python/: spec.md
specs/003-http-client-python/checklists/: requirements.md
specs/003-http-client-python/contracts/: python-api.md
specs/003-http-client-rust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-http-client-rust/checklists/: requirements.md
specs/004-adapter/: spec.md
specs/004-adapter-python/: spec.md
specs/004-adapter-rust/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/marketschema/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_schema_compliance.py
tests/integration/: __init__.py  test_adapter_base.py  test_bitbank_http.py  test_stooq_http.py
tests/unit/: test_models.py  test_registry.py  test_schemas.py  test_transforms.py
(+64 files in other folders)
