[package]
name = "marketschema"
version = "0.0.1"
edition = "2021"
authors = ["driller <eleshis@gmail.com>"]
description = "Unified market data schema for financial applications"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regress = "0.10"

[dev-dependencies]
trybuild = "1.0"
