[package]
name = "marketschema"
version = "0.0.3"
edition = "2021"
authors = ["driller <eleshis@gmail.com>"]
description = "Unified market data schema for financial applications"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[example]]
name = "stooq_demo"
path = "examples/stooq_demo.rs"

[[example]]
name = "stockanalysis_demo"
path = "examples/stockanalysis_demo.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regress = "0.10"

[dev-dependencies]
async-trait = "0.1"
csv = "1.3"
marketschema-adapters = { path = "../crates/marketschema-adapters" }
marketschema-http = { path = "../crates/marketschema-http" }
reqwest = "0.12"
scraper = "0.21"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
trybuild = "1.0"
