[package]
name = "marketschema-adapters"
version = "0.0.1"
edition = "2021"
rust-version = "1.71.1"
authors = ["driller <eleshis@gmail.com>"]
description = "Adapter framework for marketschema data transformations"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
# readme = "README.md"  # TODO: create README.md before publish

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
