[package]
name = "marketschema-adapters"
version = "0.0.3"
edition = "2024"
rust-version = "1.85.0"
authors = ["driller <eleshis@gmail.com>"]
description = "Adapter framework for marketschema data transformations"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
# readme = "README.md"  # TODO: create README.md before publish

[lib]
path = "src/lib.rs"

[features]
default = []
test-utils = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
marketschema-adapters = { path = ".", features = ["test-utils"] }
serial_test = "3.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
