[package]
name = "marketschema-examples"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["driller <eleshis@gmail.com>"]
description = "Example adapters for marketschema data transformations"
license = "MIT"
repository = "https://github.com/drillan/marketschema"

[lib]
path = "src/lib.rs"

[[example]]
name = "stooq_demo"
path = "examples/stooq_demo.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
csv = "1.3"
marketschema-adapters = { path = "../marketschema-adapters" }
marketschema-http = { path = "../marketschema-http" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
marketschema-adapters = { path = "../marketschema-adapters", features = ["test-utils"] }
