[package]
name = "marketschema-http"
version = "0.0.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["driller <eleshis@gmail.com>"]
description = "Async HTTP client for marketschema adapters"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
