[package]
name = "marketschema-http"
version = "0.0.1"
edition = "2021"
rust-version = "1.71.1"
authors = ["driller <eleshis@gmail.com>"]
description = "Async HTTP client for marketschema adapters"
license = "MIT"
repository = "https://github.com/drillan/marketschema"
# readme = "README.md"  # TODO: create README.md before publish

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
wiremock = "0.6"
# Additional features required for test execution (rt-multi-thread for #[tokio::test], macros for async test)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
